# German_notes_picker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: german_notes_picker_af055086.plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ChatInput.tsx  ChatList.tsx  ChatMessage.tsx  CorrectionsList.tsx  EnrichmentReview.tsx  ExplanationsList.tsx  IntakeReview.tsx  LibraryView.tsx  QuizletView.tsx  SentencesTable.tsx  TagPills.tsx  TagsTable.tsx  TextDetail.tsx  TextsTable.tsx  TranslationSuggestionCard.tsx  TranslationsSection.tsx  VocabularyTable.tsx  WordDetail.tsx  WordsTable.tsx
german_notes/agents/: config.py  db_helpers.py  enricher.py  enricher_tools.py  intake.py  intake_tools.py  orchestrator.py  quiz_agent.py  quiz_helpers.py  quiz_tools.py  tools.py
german_notes/api/: agent.py  main.py  routes.py  supabase_client.py  tools.py
german_notes/core/: models.py  writers.py
german_notes/extractor/: classifier.py  cli.py  parser.py
german_notes/flashcards/: __init__.py
german_notes/ocr/: cli.py  client.py  prompt.py
output/: german_sentences.csv  vocabulary.csv
