[project]
name = "german-notes-picker"
version = "0.1.0"
description = "Extract German vocabulary and sentences from WhatsApp chat exports"
authors = [
    {name = "Nelson Quinones"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langdetect (>=1.0.9,<2.0.0)"
]


[tool.poetry]
packages = [{include = "german_notes"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
