[project]
name = "german-notes-picker"
version = "0.1.0"
description = "Extract German vocabulary and sentences from WhatsApp chat exports"
authors = [
    {name = "Nelson Quinones"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langdetect (>=1.0.9,<2.0.0)",
    "anthropic (>=0.88.0,<0.89.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "supabase"
]


[tool.poetry]
packages = [{include = "german_notes"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
